# niflheim-bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: constants.py  main.py  utils.py
app/commands/: event.py
app/commands/event/: command.py  components.py  entities.py  group.py  restore_views.py
app/commands/event/create/: command.py  components.py  entities.py
app/commands/event/remind/: command.py
app/commands/info/: group.py
app/commands/info/create/: command.py
app/commands/info/delete/: command.py
app/commands/info/list_ids/: command.py
app/commands/info/show/: command.py
app/db/: client.py
app/db/models/: events.py  infos.py  reminders.py  teams.py
app/tasks/: reminders.py
